public/frontv1/css/main.css
/* ... */
.metas ul {
  display: flex;
  flex-direction: column;
  align-items: start;
}

.offer-price .price {
  font-size: 1.7rem;
  font-weight: 700;
  color: var(--accent-color);
  height: 100%;
  display: flex;
}

/* Media Queries Consolidated */
@media (max-width: 1200px) {
  .header .logo {
    order: 1;
  }

  .header .btn-getstarted {
    order: 2;
    margin: 0 15px 0 0;
    padding: 6px 20px;
  }

  .header .navmenu {
    order: 3;
  }
}

.school-row-wrapper {
  cursor: pointer;
}

ul.program-list {
  list-style: none;
  margin: 0;
  padding: 11px 0;
  font-size: small;
  color: #421082;
  line-height: 1.9;
}

.program-tuition {
  font-size: medium;
  line-height: 1;
  text-align: center;
  padding: 2rem 0;
}

.program-tuition h3 {
  font-size: 2rem;
  font-weight: bold;
}

#schoolComparison {
  position: relative;
  font-size: .9rem;
  line-height: 1;
  /* background: #ff56001c;
  border: 3px solid #e0c4b6; */
  margin-bottom: 2rem;
}

#schoolComparison .fields {
  background: #ff560017;
  border: 3px solid #ff560054;
  padding: 2rem 0;
}

#schoolComparison select {
  border: none;
  border-bottom: 3px solid var(--accent-color);
  padding: 2px 4px;
  border-radius: 0;
  font-size: 1.2rem;
  font-weight: 400;
  line-height: 1.5;
  background: #f5f5f5;
}

#schoolComparison .address {
  font-size: 1rem;
  font-style: italic;
  color: #cb835f;
}

.comparison-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
  background: #fff;
  color: var(--heading-color);
  text-align: center;
  font-size: 1rem;
  font-weight: bold;
  line-height: 1.1;
  border-right: 0.1px solid;
  padding: 1rem 0;
}

.comparison-wrapper {
  margin-top: 2rem !important;
  position: relative;
  border: 1px solid #d1d1d1;
  background: #ff56001c;
  border: 3px solid #e0c4b6;
}

.comparison-header.criteria {
  font-weight: bold;
  border-radius: 8px 0 0 0;
}

.comparison-header.schoola {
  border-radius: 0;
}

.comparison-header.schoolb {
  border: none;
}

.comparison-row .badge {
  background: var(--heading-color);
  margin: 1px;
  border-radius: 6px;
}

.comparison-row.criteria {
  font-size: 1.1rem;
  font-weight: bold;
  word-break: break-word;
  padding: 1rem .4rem;
  background: #ff56005e;
  color: var(--heading-color);
  border-bottom: .01rem solid;
  display: flex;
  justify-content: start;
  align-items: center;
}

.comparison-row.schoola {
  font-size: 1rem;
  color: #2f2c32;
  line-height: 1;
  position: relative;
  background: #eeeceb;
  border-top: .01rem solid;
  display: flex;
  flex-wrap: wrap;
  justify-content: normal;
  align-items: center;
  max-height: 45vw;
  overflow-y: auto;
}

span.round-yes {
  font-size: .9rem;
  font-weight: bold;
  color: #fff;
  background: var(--heading-color);
  border: 2px solid #184b06;
  line-height: 1.5;
  padding: .2rem 1rem;
  margin: 2px 0;
  border-radius: 13px;
}

span.round-no {
  font-size: .9rem;
  font-weight: bold;
  color: #fff;
  background: var(--accent-color);
  border: 2px solid #5c1f00;
  line-height: 1.5;
  padding: .2rem 1rem;
  margin: 2px 0;
  border-radius: 13px;
}

.comparison-row.schoolb {
  font-size: 1rem;
  color: #2f2c32;
  line-height: 1;
  position: relative;
  background: #e6e0ed;
  border-top: .01rem solid;
  display: flex;
  flex-wrap: wrap;
  justify-content: normal;
  align-items: center;
  padding: 1rem inherit;
  max-height: 45vw;
  overflow-y: auto;
}

.badge.program {
  font-size: .9rem;
  font-weight: 100;
  text-align: left;
  line-height: 1.5;
}

.program-details {
  display: flex;
  justify-content: space-around;
  font-weight: 600;
}

.program-details p {
  background: #edf0f1;
  padding: .6rem 1.9rem;
  border-radius: 5px;
  color: var(--accent-color);
}

.program-domains h3,
.program-accred h3 {
  font-size: large;
  font-weight: 600;
}

.program-domains {
  display: flex;
  position: relative;
  margin: 1.2rem 0;
  background: #f3f0f0;
  padding: 1rem;
}

.program-domains ul {
  padding: 0;
  margin: 0;
  margin-left: 1rem;
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  list-style: none;
}

.program-domains ul li {
  border: 1px solid #4f089e;
  border-radius: 4px;
  padding: .2rem 1rem;
  margin-right: .5rem;
  font-size: small;
  background: var(--accent-color);
  color: #fff;
}

.program-accred {
  display: flex;
  position: relative;
  margin: 1.2rem 0;
  background: #f3f0f0;
  padding: 1rem;
}

.program-accred ul {
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  width: 100%;
  list-style: none;
}

.program-accred ul li {
  border: 1px solid #4f089e;
  border-radius: 4px;
  padding: .2rem 1rem;
  font-size: small;
  background: var(--heading-color);
  color: #fff;
}

.program-description {
  background: rgba(255, 255, 255, 0.83);
}

.similar-programs .similar {
  border: 1px solid #d1d1d1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.similar-programs .program-name a {
  text-decoration: none;
  font-size: xx-large;
  font-weight: 600;
  text-align: center;
  display: inline-block;
  padding: 0 .4rem;
  width: 100%;
}

.similar-programs .program-school {
  font-size: small;
  text-align: center;
  font-weight: 600;
  padding: 0;
  margin: 0;
  color: var(--accent-color);
}
/* ... */

